MODINV-1395 - Importing Records from BNE z39.50 - record not available error (#925)
(cherry picked from commit 7825a9fb69e21da1549ee3c008c42d69442eeaa6)